--- a/Web.Statu/Views/Home/Detail.cshtml
+++ b/Web.Statu/Views/Home/Detail.cshtml
@@ -380,8 +380,7 @@
                     Tento záznam jako JSON:
                 </td>
                 <td>
-                    <a href="/api/v1/Detail/@(Model.Id)?json=1&nice=1" target="_blank">https://www.hlidacstatu.cz/api/v1/Detail/@(Model.Id)?json=1&nice=1
-                    </a>
+                    <a href="/api/v1/Detail/@(Model.Id)?nice=1" target="_blank">https://www.hlidacstatu.cz/api/v1/Detail/@(Model.Id)?nice=1</a>
                     <br />
                     <small class="text-muted">Popis JSON <a href="@Url.Action("Index", "ApiV1")">zde</a></small>
                     <small class="text-muted">Chcete všechna data najednou? Koukněte <a href="@Url.Action("Index", "ApiV1")">sem</a>.</small>
